replaced 2 html files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li> <a href="#contact">contact</a></li>
-                <li> <a href="#projects">works</a></li>
+                <li> <a href=works.html>works</a></li>
                 <li> <a href="#experience">experience</a></li>
                 <li class="empty"> </li>
                 <li>behance</li>
