--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <figure>
                         <img src="img/jane.jpg"
                         class="intro-img" alt="jane doe">   
-                        <figcaption> taken by rasa narkunaite</figcaption>
+                        <figcaption> taken by rasa rasa narkunaite</figcaption>
                         </figure>
                     </div>
                 </div>
